# a3c

./: pyproject.toml  pytest.ini
cuda_kernel_manager/: __init__.py  exceptions.py
cuda_kernel_manager/memory/: __init__.py  abstract.py  allocators.py  best_fit.py  buddy.py  manager.py  slab.py
cuda_kernel_manager/types/: __init__.py  aliases.py  dataclasses.py  enums.py  generics.py  protocols.py
cuda_kernel_manager/utils/: __init__.py  counters.py  queues.py  synchronization.py  topology.py
tensoroptim/: __init__.py  cli.py  exceptions.py  factory.py
tensoroptim/codecs/: __init__.py  codec.py  compression.py
tensoroptim/core/: __init__.py  manager.py  pool.py  reference.py  registry.py  tensor.py
tensoroptim/memory/: __init__.py  allocators.py  backends.py  segments.py
tensoroptim/memory/backends/: __init__.py  base.py  cuda_ipc.py  hugepages.py  posix_shm.py
tensoroptim/memory/segments/: __init__.py  hugepages.py  numa_aware.py  optimized_buffer.py  posix_shm.py
tensoroptim/profiling/: __init__.py  metrics.py  profiler.py
tensoroptim/types/: __init__.py  aliases.py  descriptors.py  enums.py  protocols.py
tests/: __init__.py  test_basic.py  test_core.py  test_integration.py  test_memory.py
